Changed heights and widths to make sure thewebsite looked correct on mobile devices, still working on certain aspects

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,46 +1,32 @@
 .main-about-section{
 
-  width: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   background-color:  #121217;
-
 }
 
-
-
 .about-header-text{
-  font-size: 4rem;
+  font-size: 5rem;
   color: #333;
-  border: 2px solid red;
+  /*border: 2px solid grey;*/
   text-align: center;
-  margin-top: -3px;
+  margin-top: -1px;
 
 }
 
 .main-about-container{
-  height: 500px;
-  width: 100%;
+
+  min-width: 100vw;
+  min-height: 100vh;
   background-color: #fafafa;
-
-
-
-}
-
-.main-about-block{
-
-  height: 400px;
-  width: 100%;
+  text-align: center;
 
 
 }
-
-
-
-
-
 
 .main-about-container-two{
-  height: 220px;
-  width: 100%;
+  height: 300px;
+  width: 100vw;
   margin-top: 100px;
-  background-color: #333;
+  background-color: silver;
 }
