--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,5 +1,6 @@
 .navigation-parent{
-  height: 45px;
+  height: 55px;
+  width: 100%;
   border: 4px solid black;
   background-color: #333;
 
@@ -14,10 +15,11 @@
 }
 
 .head-anchor-tabs{
- border: 3px solid grey;
- width: 80px;
+ border: 3px solid black;
+ background-color: black;
+ width: 120px;
  display: flex;
  justify-content: center;
- margin-top: 10px;
+ margin-top: 5px;
  font-size: 2.0rem;
 }
